--- a/stylegan.ipynb
+++ b/stylegan.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 102,
    "id": "190c6d04",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.506205Z",
-     "start_time": "2021-10-23T09:25:03.382976Z"
+     "end_time": "2021-10-24T06:21:53.015726Z",
+     "start_time": "2021-10-24T06:21:53.010176Z"
     }
    },
    "outputs": [],
@@ -28,7 +28,7 @@
     "from PIL import Image\n",
     "import numpy as np\n",
     "import torch\n",
-    "from torch import nn\n",
+    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torchvision.datasets import ImageFolder\n",
@@ -48,12 +48,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "837ed530",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.567074Z",
-     "start_time": "2021-10-23T09:25:04.508410Z"
+     "end_time": "2021-10-24T05:21:35.830622Z",
+     "start_time": "2021-10-24T05:21:35.761625Z"
     }
    },
    "outputs": [],
@@ -129,12 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "id": "e6d89eac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.573047Z",
-     "start_time": "2021-10-23T09:25:04.568591Z"
+     "end_time": "2021-10-24T06:08:28.401210Z",
+     "start_time": "2021-10-24T06:08:28.394947Z"
     }
    },
    "outputs": [],
@@ -146,8 +146,7 @@
     "        self.synthesis = SynthesisNetwork(num_resolution, w_channel=w_channel, device=device)\n",
     "\n",
     "    def forward(self, latent_code, level):\n",
-    "        w = self.mapping(latent_code)\n",
-    "        images = self.synthesis(w, level)"
+    "        return False"
    ]
   },
   {
@@ -160,12 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ad8acdb4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.581426Z",
-     "start_time": "2021-10-23T09:25:04.575327Z"
+     "end_time": "2021-10-24T05:21:36.243952Z",
+     "start_time": "2021-10-24T05:21:36.232740Z"
     }
    },
    "outputs": [],
@@ -220,12 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "71160a9b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.587018Z",
-     "start_time": "2021-10-23T09:25:04.582986Z"
+     "end_time": "2021-10-24T05:21:37.720005Z",
+     "start_time": "2021-10-24T05:21:37.711762Z"
     }
    },
    "outputs": [],
@@ -269,12 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "29d08ac2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.592314Z",
-     "start_time": "2021-10-23T09:25:04.588569Z"
+     "end_time": "2021-10-24T05:21:38.269303Z",
+     "start_time": "2021-10-24T05:21:38.262943Z"
     }
    },
    "outputs": [],
@@ -299,12 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e3928c1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.597920Z",
-     "start_time": "2021-10-23T09:25:04.593925Z"
+     "end_time": "2021-10-24T05:21:38.628878Z",
+     "start_time": "2021-10-24T05:21:38.622330Z"
     }
    },
    "outputs": [],
@@ -329,12 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "1c993a74",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.603021Z",
-     "start_time": "2021-10-23T09:25:04.599741Z"
+     "end_time": "2021-10-24T05:21:38.926249Z",
+     "start_time": "2021-10-24T05:21:38.919318Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -376,12 +375,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "820f2656",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.609006Z",
-     "start_time": "2021-10-23T09:25:04.604502Z"
+     "end_time": "2021-10-24T05:21:39.415609Z",
+     "start_time": "2021-10-24T05:21:39.406718Z"
     }
    },
    "outputs": [],
@@ -407,12 +406,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "33465b43",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.615289Z",
-     "start_time": "2021-10-23T09:25:04.611994Z"
+     "end_time": "2021-10-24T05:21:39.717492Z",
+     "start_time": "2021-10-24T05:21:39.711522Z"
     }
    },
    "outputs": [],
@@ -437,12 +436,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ed329350",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.623002Z",
-     "start_time": "2021-10-23T09:25:04.616748Z"
+     "end_time": "2021-10-24T05:21:40.125351Z",
+     "start_time": "2021-10-24T05:21:40.112072Z"
     }
    },
    "outputs": [],
@@ -498,12 +497,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "58f2f289",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.630726Z",
-     "start_time": "2021-10-23T09:25:04.624335Z"
+     "end_time": "2021-10-24T05:21:40.751051Z",
+     "start_time": "2021-10-24T05:21:40.743188Z"
     }
    },
    "outputs": [],
@@ -546,12 +545,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "c0ff8db6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.642207Z",
-     "start_time": "2021-10-23T09:25:04.633732Z"
+     "end_time": "2021-10-24T05:21:41.232090Z",
+     "start_time": "2021-10-24T05:21:41.223468Z"
     }
    },
    "outputs": [],
@@ -588,12 +587,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "7052d873",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T10:13:42.957260Z",
-     "start_time": "2021-10-23T10:13:42.837411Z"
+     "end_time": "2021-10-24T05:21:42.195918Z",
+     "start_time": "2021-10-24T05:21:42.160700Z"
     },
     "code_folding": []
    },
@@ -683,12 +682,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "155c95eb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T10:15:17.575593Z",
-     "start_time": "2021-10-23T10:15:17.564053Z"
+     "end_time": "2021-10-24T05:21:47.085108Z",
+     "start_time": "2021-10-24T05:21:47.072863Z"
     }
    },
    "outputs": [],
@@ -724,12 +723,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "9ae02931",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T10:15:18.962948Z",
-     "start_time": "2021-10-23T10:15:18.949966Z"
+     "end_time": "2021-10-24T05:21:47.731082Z",
+     "start_time": "2021-10-24T05:21:47.719545Z"
     },
     "code_folding": []
    },
@@ -781,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0788aa70",
+   "id": "ab7607b6",
    "metadata": {},
    "source": [
     "## Loss"
@@ -789,12 +788,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 90,
    "id": "d575574e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:04.682287Z",
-     "start_time": "2021-10-23T09:25:04.673403Z"
+     "end_time": "2021-10-24T06:16:03.765113Z",
+     "start_time": "2021-10-24T06:16:03.749069Z"
     },
     "code_folding": []
    },
@@ -813,6 +812,9 @@
     "        self.wgan_epsilon = wgan_epsilon\n",
     "        self.wgan_lambda = wgan_lambda\n",
     "        self.wgan_target = wgan_target\n",
+    "        if device.type == 'cuda':\n",
+    "            self.G = self.G.module\n",
+    "            self.D = self.D.module\n",
     "\n",
     "    def G_wgan(self, latent_code, level):\n",
     "        # Loss_G = -D(G(z))\n",
@@ -849,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "453bf31d",
+   "id": "c0b71646",
    "metadata": {},
    "source": [
     "## Train"
@@ -857,12 +859,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "9f342ba9",
+   "execution_count": 112,
+   "id": "17d74e9c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T10:15:14.959905Z",
-     "start_time": "2021-10-23T10:15:14.924346Z"
+     "end_time": "2021-10-24T06:41:16.110471Z",
+     "start_time": "2021-10-24T06:41:16.083253Z"
     },
     "code_folding": []
    },
@@ -871,11 +873,11 @@
     "class TrainProcessing:\n",
     "    def __init__(self, \n",
     "                 dataset,\n",
-    "                 epoch = 8_000_000,\n",
+    "                 epoch = 800_000,\n",
     "                 latent_code_dim = 512,\n",
     "                 num_resolution = 5,\n",
     "                 batch_size = 16,\n",
-    "                 num_gpu = 2,\n",
+    "                 num_gpu = 4,\n",
     "                 beta1 = 0.5,\n",
     "                 init_size = 4,\n",
     "                 max_size = 64,\n",
@@ -897,24 +899,26 @@
     "        \n",
     "        # gpu\n",
     "        self.device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "#         self.num_gpu = num_gpu\n",
+    "        \n",
+    "        self.num_gpu = num_gpu\n",
     "        IS_PARALLEL = True if num_gpu > 1 else False\n",
     "\n",
     "        self.generator = StyledGenerator(num_resolution=num_resolution, w_channel=latent_code_dim, device=self.device)\n",
     "        self.discriminator = Discriminator(num_resolution=num_resolution)\n",
-    "\n",
+    "        \n",
     "        if IS_PARALLEL and torch.cuda.device_count() > 1:\n",
-    "            self.generator = nn.DataParallel(self.generator, device_ids=list(range(num_gpu)))\n",
-    "            self.discriminator = nn.DataParallel(self.discriminator, device_ids=list(range(num_gpu)))\n",
-    "        self.g_module = self.generator.module.to(self.device)\n",
-    "        self.d_module = self.discriminator.module.to(self.device)\n",
+    "            self.generator = nn.DataParallel(self.generator, device_ids=range(num_gpu)).cuda()\n",
+    "            self.discriminator = nn.DataParallel(self.discriminator, device_ids=range(num_gpu)).cuda()\n",
+    "        \n",
+    "#         self.generator = self.generator.to(self.device)\n",
+    "#         self.discriminator = self.discriminator.to(self.device)\n",
     "\n",
     "        # 优化器\n",
     "        self.generator_optimizer = torch.optim.Adam(self.generator.parameters(), lr=0.0002, betas=(beta1, 0.999))\n",
     "        self.discriminator_optimizer = torch.optim.Adam(self.discriminator.parameters(), lr=0.0002, betas=(beta1, 0.999))\n",
     "\n",
     "        # 初始化损失函数\n",
-    "        self.loss = WGAN(self.g_module, self.d_module, device=self.device)\n",
+    "        self.loss = WGAN(self.generator, self.discriminator, device=self.device)\n",
     "        \n",
     "    \n",
     "    def train(self):\n",
@@ -958,15 +962,7 @@
     "                train_loader = self._sample_data(self.dataset, resolution, self.batch_size)\n",
     "                data_loader = iter(train_loader)\n",
     "\n",
-    "                torch.save(\n",
-    "                    {\n",
-    "                        'generator': self.g_module.state_dict(),\n",
-    "                        'discriminator': self.d_module.state_dict(),\n",
-    "                        'g_optimizer': self.generator_optimizer.state_dict(),\n",
-    "                        'd_optimizer': self.discriminator_optimizer.state_dict(),\n",
-    "                    },\n",
-    "                    f'checkpoint/train_step-{ckpt_level}.model',\n",
-    "                )\n",
+    "                self._save_model(ckpt_level)\n",
     "\n",
     "            try:\n",
     "                data = next(data_loader)\n",
@@ -1024,18 +1020,40 @@
     "        return train_loader\n",
     "    \n",
     "    def _update_alpha(self, alpha):\n",
-    "        self.g_module.synthesis.fade_in.alpha = alpha\n",
-    "        self.d_module.fade_in.alpha = alpha\n"
+    "        if self.device.type == 'cuda':\n",
+    "            self.generator.module.synthesis.fade_in.alpha = alpha\n",
+    "            self.discriminator.module.fade_in.alpha = alpha\n",
+    "        else:\n",
+    "            self.generator.synthesis.fade_in.alpha = alpha\n",
+    "            self.discriminator.module.fade_in.alpha = alpha\n",
+    "        \n",
+    "    def _save_model(self, ckpt_level):\n",
+    "        if self.num_gpu > 0:\n",
+    "            g = self.generator.module\n",
+    "            d = self.discriminator.module\n",
+    "        else:\n",
+    "            g = self.generator\n",
+    "            d = self.discriminator\n",
+    "        \n",
+    "        torch.save(\n",
+    "            {\n",
+    "                'generator': g.state_dict(),\n",
+    "                'discriminator': d.state_dict(),\n",
+    "                'g_optimizer': self.generator_optimizer.state_dict(),\n",
+    "                'd_optimizer': self.discriminator_optimizer.state_dict(),\n",
+    "            },\n",
+    "            f'checkpoint/train_step-{ckpt_level}.model',\n",
+    "        )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 93,
    "id": "8e7c46b6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-23T09:25:29.036840Z",
-     "start_time": "2021-10-23T09:25:04.701908Z"
+     "end_time": "2021-10-24T06:16:53.425708Z",
+     "start_time": "2021-10-24T06:16:28.909092Z"
     }
    },
    "outputs": [],
@@ -1054,10 +1072,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da3e4434",
+   "id": "d0708374",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-10-23T10:19:15.338Z"
+     "start_time": "2021-10-24T06:41:20.451Z"
     }
    },
    "outputs": [
@@ -1065,11 +1083,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Size: 64; G: -198.084; D: 2066.232; Alpha: 0.37842:   1%|          | 46426/8000000 [2:09:38<730:03:49,  3.03it/s]             "
+      "Size: 64; G: -35841.098; D: 948020.375; Alpha: 1.00000:   4%|▍         | 34430/800000 [1:09:47<85:11:04,  2.50it/s]        "
      ]
     }
    ],
    "source": [
+    "os.environ['CUDA_VISIBLE_DEVICES'] = '0, 1, 2, 3'\n",
     "trainer = TrainProcessing(dataset)\n",
     "trainer.train()"
    ]
