修复并行计算

--- a/stylegan.ipynb
+++ b/stylegan.ipynb
@@ -140,13 +140,14 @@
    "outputs": [],
    "source": [
     "class StyledGenerator(nn.Module):\n",
-    "    def __init__(self, num_resolution, w_channel=512, device='cpu'):\n",
+    "    def __init__(self, num_resolution, w_channel=512, device=torch.device('cpu')):\n",
     "        super().__init__()\n",
     "        self.mapping = MappingNetwork()\n",
     "        self.synthesis = SynthesisNetwork(num_resolution, w_channel=w_channel, device=device)\n",
     "\n",
     "    def forward(self, latent_code, level):\n",
-    "        return False"
+    "        w = self.mapping(latent_code)\n",
+    "        return self.synthesis(w, level)"
    ]
   },
   {
@@ -406,24 +407,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "id": "33465b43",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-24T05:21:39.717492Z",
-     "start_time": "2021-10-24T05:21:39.711522Z"
+     "end_time": "2021-10-27T20:58:20.942992Z",
+     "start_time": "2021-10-27T20:58:20.938293Z"
     }
    },
    "outputs": [],
    "source": [
     "class Noise(nn.Module):\n",
-    "    def __init__(self, channel):\n",
+    "    def __init__(self, channel,device=torch.device('cpu')):\n",
     "        super().__init__()\n",
+    "        self.device = device\n",
     "        # channel为每层输入的张量的通道数\n",
     "        self.weight = nn.Parameter(torch.zeros(1, channel, 1, 1))\n",
     "    \n",
     "    def forward(self, noise):\n",
-    "        return noise * self.weight"
+    "        return noise.to(self.device) * self.weight"
    ]
   },
   {
@@ -447,14 +449,14 @@
    "outputs": [],
    "source": [
     "class LayerEpilogue(nn.Module):\n",
-    "    def __init__(self, layer_channel, w_channel=512, use_noise=True, use_pixel_norm=False, use_instance_norm=True, device='cpu'):\n",
+    "    def __init__(self, layer_channel, w_channel=512, use_noise=True, use_pixel_norm=False, use_instance_norm=True, device=torch.device('cpu')):\n",
     "        '''\n",
     "        :channel: x的通道数\n",
     "        '''\n",
     "        super().__init__()\n",
     "        self.device = device\n",
     "        self.use_noise = use_noise\n",
-    "        self.B = Noise(layer_channel)\n",
+    "        self.B = Noise(layer_channel, device=device)\n",
     "        self.adain = AdaIN(w_channel, layer_channel*2)\n",
     "        \n",
     "        self.pixel_norm = PixelNorm()\n",
@@ -508,7 +510,7 @@
    "outputs": [],
    "source": [
     "class StyleBlock(nn.Module):\n",
-    "    def __init__(self, resolution, w_channel=512, in_channels=512, out_channels=512, device='cpu'):\n",
+    "    def __init__(self, resolution, w_channel=512, in_channels=512, out_channels=512, device=torch.device('cpu')):\n",
     "        super().__init__()\n",
     "        \n",
     "        assert resolution >= 4\n",
@@ -599,7 +601,7 @@
    "outputs": [],
    "source": [
     "class SynthesisNetwork(nn.Module):\n",
-    "    def __init__(self, num_resolution, w_channel=512, device='cpu'):\n",
+    "    def __init__(self, num_resolution, w_channel=512, device=torch.device('cpu')):\n",
     "        super().__init__()\n",
     "        max_channel = 512\n",
     "\n",
@@ -656,7 +658,7 @@
     "        return self.fade_in(residual, x)\n",
     "\n",
     "    \n",
-    "    def _generate_noise(self, num_resolution, device='cpu'):\n",
+    "    def _generate_noise(self, num_resolution, device=torch.device('cpu')):\n",
     "        for layer_idx in range(1, (num_resolution) * 2 + 1):\n",
     "            self.noises.append(torch.randn([1, 1, 2 ** ((layer_idx + 1) // 2 + 1), 2 ** ((layer_idx + 1) // 2 + 1)], device=device))\n",
     "    \n",
@@ -806,7 +808,7 @@
     "        \n",
     "        \n",
     "class WGAN(Loss):\n",
-    "    def __init__(self, G, D, wgan_epsilon=0.001, wgan_lambda=10.0, wgan_target=1.0, device='cpu'):\n",
+    "    def __init__(self, G, D, wgan_epsilon=0.001, wgan_lambda=10.0, wgan_target=1.0, device=torch.device('cpu')):\n",
     "        super().__init__(G, D)\n",
     "        self.device = device\n",
     "        self.wgan_epsilon = wgan_epsilon\n",
@@ -818,16 +820,14 @@
     "\n",
     "    def G_wgan(self, latent_code, level):\n",
     "        # Loss_G = -D(G(z))\n",
-    "        w = self.G.mapping(latent_code)\n",
-    "        fake_images = self.G.synthesis(w, level)\n",
+    "        fake_images = self.G(latent_code, level)\n",
     "        fake_out = self.D(fake_images, level)\n",
     "        loss = -torch.mean(fake_out)\n",
     "        return loss, fake_images\n",
     "    \n",
     "    def D_wgan(self, latent_code, real_images, level):\n",
     "        # Loss_D = D(G(z)) - D(x) + ε·D(x)^2\n",
-    "        w = self.G.mapping(latent_code)\n",
-    "        fake_images = self.G.synthesis(w, level)\n",
+    "        fake_images = self.G(latent_code, level)\n",
     "        real_out = self.D(real_images, level)\n",
     "        fake_out = self.D(fake_images, level)\n",
     "        loss = torch.mean(fake_out) - torch.mean(real_out) + self.wgan_epsilon * torch.square(real_out)\n",
@@ -907,12 +907,11 @@
     "        self.discriminator = Discriminator(num_resolution=num_resolution)\n",
     "        \n",
     "        if IS_PARALLEL and torch.cuda.device_count() > 1:\n",
-    "            self.generator = nn.DataParallel(self.generator, device_ids=range(num_gpu)).cuda()\n",
-    "            self.discriminator = nn.DataParallel(self.discriminator, device_ids=range(num_gpu)).cuda()\n",
+    "            self.generator = nn.DataParallel(self.generator, device_ids=range(num_gpu)).to(self.device)\n",
+    "            self.generator.module.mapping = nn.DataParallel(self.generator.module.mapping, device_ids=range(num_gpu)).to(self.device)\n",
+    "            self.generator.module.synthesis = nn.DataParallel(self.generator.module.synthesis, device_ids=range(num_gpu)).to(self.device)\n",
+    "            self.discriminator = nn.DataParallel(self.discriminator, device_ids=range(num_gpu)).to(self.device)\n",
     "        \n",
-    "#         self.generator = self.generator.to(self.device)\n",
-    "#         self.discriminator = self.discriminator.to(self.device)\n",
-    "\n",
     "        # 优化器\n",
     "        self.generator_optimizer = torch.optim.Adam(self.generator.parameters(), lr=0.0002, betas=(beta1, 0.999))\n",
     "        self.discriminator_optimizer = torch.optim.Adam(self.discriminator.parameters(), lr=0.0002, betas=(beta1, 0.999))\n",
@@ -941,9 +940,11 @@
     "        \n",
     "        max_level = int(math.log2(self.max_size)) - 2\n",
     "        final_progress = False\n",
+    "        alpha = 1\n",
     "        \n",
     "        for iteration in pbar:\n",
-    "            alpha = min(1, 1 / phase * (used_sample + 1))\n",
+    "            if not final_progress:\n",
+    "                alpha = min(1, 1 / phase * (used_sample + 1))\n",
     "            \n",
     "            if used_sample > phase * 2:\n",
     "                used_sample = 0\n",
@@ -1071,11 +1072,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "d0708374",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-10-24T06:41:20.451Z"
+     "end_time": "2021-10-27T20:58:20.929517Z",
+     "start_time": "2021-10-24T06:41:18.745753Z"
     }
    },
    "outputs": [
@@ -1083,7 +1085,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Size: 64; G: -35841.098; D: 948020.375; Alpha: 1.00000:   4%|▍         | 34430/800000 [1:09:47<85:11:04,  2.50it/s]        "
+      "Size: 64; G: -1997.126; D: 61317.078; Alpha: 1.00000: 100%|██████████| 800000/800000 [86:17:01<00:00,  2.58it/s]                      \n"
      ]
     }
    ],
@@ -1132,7 +1134,7 @@
     "height": "739px",
     "left": "1099.2px",
     "top": "359px",
-    "width": "223.797px"
+    "width": "306.797px"
    },
    "toc_section_display": true,
    "toc_window_display": true
